# muffin-v-chihuahua-wit-embedded-model

./: .gitignore  MANIFEST.in  README.md  dockerfile  makefile  setup.cfg
.github/workflows/: python-build.yml
muffin_v_chihuahua/: __main__.py  classifier.py  display_predictions_with_an_embedded_model.py
